--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=PavelRest
+spring.datasource.url=jdbc:postgresql://localhost/MuRest
+spring.datasource.username=postgres
+spring.datasource.password=01112023
+spring.jpa.generate-ddl=true
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
